# Rag-Full-Tutorial

./: CLAUDE.md  ReadeMe.md  data_loader.py  main.py  pyproject.toml  start-all.sh  streamlit_app.py  vector_db.py
frontend/: .env.local.example  README.md  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/query/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/components/: PDFUpload.tsx  QueryForm.tsx
frontend/src/lib/: inngest.ts
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/390bbb85-f0c6-49b9-8c27-47182ba59512/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/390bbb85-f0c6-49b9-8c27-47182ba59512/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/78706f45-e08f-420f-ade8-d13c8d8ac0ed/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/78706f45-e08f-420f-ade8-d13c8d8ac0ed/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/a1c01bd4-9f68-4819-a215-feb8a9876149/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/a1c01bd4-9f68-4819-a215-feb8a9876149/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/e7495c02-7450-4950-aa22-86cb3f1b5b2b/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/ee5511fc-eb49-4655-9d66-34e2a35c5afd/: mutable_id_tracker.mappings
(+6 files in other folders)
